# andy-core

./: CMakeLists.txt  color.hpp  core.hpp  uva-pm.json
cspec/: cspec.cpp
cspec/classes/: var_spec.cpp
cspec/namespaces/core/: core_spec.cpp
include/andy/: color.hpp  core.hpp  point.hpp  rect.hpp  size.hpp  var.hpp  vector.hpp
include/uva/: color.hpp  rect.hpp  size.hpp  var.hpp
src/: core.cpp  var.cpp
uva/: color.hpp  core.hpp  point.hpp  size.hpp  var.hpp  vector.hpp
